--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
           dotnet-version: '6.0.x'
       # publishes Blazor project to the release-folder
       - name: Publish .NET Core Project
-        run: dotnet publish PicuSpace.Web.csproj -c Release -o release --nologo
+        run: dotnet publish PicuSpace.Web/PicuSpace.Web.csproj -c Release -o release --nologo
       - name: Commit wwwroot to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
