--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: Deploy to GitHub Pages
 env:
-  PUBLISH_DIR: bin/Release/net6.0/publish/wwwroot
+  PUBLISH_DIR: PicuSpace.Web/bin/Release/net6.0/publish/wwwroot
 # Run workflow on every push to the master branch
 on:
   push:
@@ -27,6 +27,7 @@ jobs:
       # publishes Blazor project to the release-folder
       - name: Publish .NET Core Project
         run: dotnet publish PicuSpace.Web/PicuSpace.Web.csproj -c Release -o release --nologo
+        
       - name: Rewrite base href
         uses: SteveSandersonMS/ghaction-rewrite-base-href@v1
         with:
