--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Publish .NET Core Project
         run: dotnet publish PicuSpace.Web/PicuSpace.Web.csproj -c Release -o release --nologo
       # changes the base-tag in index.html from '/' to 'BlazorGitHubPagesDemo' to match GitHub Pages repository subdirectory
-      - name: Change base-tag in index.html from / to BlazorGitHubPagesDemo
-        run: sed -i 's/<base href="\/" \/>/<base href="\/PicuSpace\/" \/>/g' release/wwwroot/index.html
+      # - name: Change base-tag in index.html from / to BlazorGitHubPagesDemo
+      #   run: sed -i 's/<base href="\/" \/>/<base href="\/PicuSpace\/" \/>/g' release/wwwroot/index.html
       # add .nojekyll file to tell GitHub pages to not treat this as a Jekyll project. (Allow files and folders starting with an underscore)
       - name: Add .nojekyll file
         run: touch release/wwwroot/.nojekyll
