--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: Deploy to GitHub Pages
 env:
-  PUBLISH_DIR: PicuSpace.Web/bin/Release/net6.0/publish/wwwroot
+  PUBLISH_DIR: PersonalWebsite/PicuSpace.Web/bin/Release/net6.0/publish/wwwroot
 on:
   push:
     branches: [ master ]
