--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           dotnet-version: '6.0.x'
       - name: Publish .NET Core Project
-        run: dotnet publish PicuSpace.Web/PicuSpace.Web.csproj -c Release -o release --nologo
+        run: dotnet publish PersonalWebsite/PicuSpace.Web/PicuSpace.Web.csproj -c Release -o release --nologo
       - name: Add .nojekyll file
         run: touch release/wwwroot/.nojekyll
       - name: Commit wwwroot to GitHub Pages
