--- a/Blog/package.json
+++ b/Blog/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@strapi/plugin-documentation": "^4.4.5",
     "@strapi/plugin-graphql": "^4.0.5",
     "@strapi/plugin-i18n": "4.4.5",
     "@strapi/plugin-users-permissions": "4.4.5",
