--- a/PersonalWebsite/PicuSpace.Web/PicuSpace.Web.csproj
+++ b/PersonalWebsite/PicuSpace.Web/PicuSpace.Web.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="MudBlazor" Version="6.0.10" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\Blog\" />
+  </ItemGroup>
+
 </Project>
