--- a/PersonalWebsite/PicuSpace.Web/wwwroot/appsettings.json
+++ b/PersonalWebsite/PicuSpace.Web/wwwroot/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "AppSettings": {
-    "STRAPI_API_URL": "https://strapi-picu.herokuapp.com/api"
+    "STRAPI_API_URL": "https://picu-blog-api.herokuapp.com/api"
   }
 }
