--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -17,12 +17,15 @@
     "babel-plugin-macros": "^3.1.0",
     "gsap-trial": "^3.11.3",
     "loaders.css": "^0.1.2",
+    "markdown-to-jsx": "^7.1.8",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.1.0",
     "react-loaders": "^3.0.1",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.5.0",
     "sass": "^1.55.0",
     "web-vitals": "^2.1.4"
   },
