--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.1.0",
     "react-loaders": "^3.0.1",
+    "react-markdown": "^8.0.5",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.5.0",
