--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -1,6 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
+  "homepage": "https://picu63.github.io/PicuSpace",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.7.0",
@@ -31,6 +32,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -55,6 +58,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.18.6"
+    "@babel/preset-react": "^7.18.6",
+    "gh-pages": "^5.0.0"
   }
 }
