--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.10.6",
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^13.0.0",
         "@testing-library/user-event": "^13.2.1",
@@ -12,8 +13,12 @@
         "@types/react-dom": "^18.0.0",
         "markdown-to-jsx": "^7.2.0",
         "react": "^18.2.0",
+        "react-awesome-reveal": "^4.2.3",
         "react-dom": "^18.2.0",
+        "react-icons": "^4.8.0",
         "react-scripts": "5.0.1",
+        "react-slick": "^0.29.0",
+        "styled-components": "^5.3.9",
         "typescript": "^4.4.2",
         "web-vitals": "^2.1.0"
     },
@@ -44,6 +49,7 @@
         ]
     },
     "devDependencies": {
+        "@types/styled-components": "^5.1.26",
         "gh-pages": "^5.0.0"
     }
 }
