--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -11,12 +11,14 @@
         "@types/node": "^16.7.13",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
+        "buffer": "^6.0.3",
         "markdown-to-jsx": "^7.2.0",
         "react": "^18.2.0",
         "react-awesome-reveal": "^4.2.3",
         "react-dom": "^18.2.0",
         "react-icons": "^4.8.0",
         "react-scripts": "5.0.1",
+        "react-simple-captcha": "^9.3.1",
         "react-slick": "^0.29.0",
         "styled-components": "^5.3.9",
         "typescript": "^4.4.2",
