--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -1,6 +1,6 @@
 {
     "name": "my-app",
-    "version": "0.1.6",
+    "version": "0.1.7",
     "private": true,
     "dependencies": {
         "@emotion/react": "^11.10.6",
@@ -18,6 +18,7 @@
         "react-awesome-reveal": "^4.2.3",
         "react-dom": "^18.2.0",
         "react-icons": "^4.8.0",
+        "react-router-dom": "^6.21.2",
         "react-scripts": "5.0.1",
         "react-simple-captcha": "^9.3.1",
         "react-slick": "^0.29.0",
