--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -1,6 +1,6 @@
 {
     "name": "my-app",
-    "version": "0.1.7",
+    "version": "0.1.10",
     "private": true,
     "dependencies": {
         "@emotion/react": "^11.10.6",
@@ -11,6 +11,7 @@
         "@types/node": "^16.7.13",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
+        "@vitejs/plugin-react": "^4.2.1",
         "buffer": "^6.0.3",
         "cross-env": "^7.0.3",
         "markdown-to-jsx": "^7.2.0",
@@ -19,21 +20,21 @@
         "react-dom": "^18.2.0",
         "react-icons": "^4.8.0",
         "react-router-dom": "^6.21.2",
-        "react-scripts": "5.0.1",
         "react-simple-captcha": "^9.3.1",
         "react-slick": "^0.29.0",
         "styled-components": "^5.3.9",
         "typescript": "^4.4.2",
+        "vite": "^5.1.4",
+        "vite-plugin-svgr": "^4.2.0",
+        "vite-tsconfig-paths": "^4.3.1",
         "web-vitals": "^2.1.0"
     },
     "scripts": {
         "predeploy": "npm run build",
         "deploy": "gh-pages -d build",
-        "start": "react-scripts start",
-        "start-no-browser": "cross-env BROWSER=none react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "start": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview"
     },
     "eslintConfig": {
         "extends": [
