--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,10 +34,10 @@ jobs:
               uses: actions/setup-node@v3
               with:
                   node-version: 18
-                  cache: 'npm'
+                  cache: 'yarn'
                   cache-dependency-path: './portfolio/yarn.lock'
             - name: Install dependencies
-              run: npm install
+              run: yarn install
             - name: Build
               run: npm run build
             - name: Setup Pages
