--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,6 +48,7 @@ jobs:
               uses: actions/upload-artifact@v4
               with:
                   # Upload dist repository
+                  name: 'deployment'
                   path: './portfolio/dist'
             - name: Deploy to GitHub Pages
               id: deployment
