fix deployment - fix naming

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,7 +48,7 @@ jobs:
               uses: actions/upload-artifact@v4
               with:
                   # Upload dist repository
-                  name: 'deployment'
+                  name: 'github-pages'
                   path: './portfolio/dist'
             - name: Deploy to GitHub Pages
               id: deployment
