--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -1,6 +1,6 @@
 {
     "name": "my-app",
-    "version": "0.1.10",
+    "version": "0.1.12",
     "private": true,
     "dependencies": {
         "@emotion/react": "^11.10.6",
@@ -31,7 +31,7 @@
     },
     "scripts": {
         "predeploy": "npm run build",
-        "deploy": "gh-pages -d build",
+        "deploy": "gh-pages -d dist",
         "start": "vite",
         "build": "tsc && vite build",
         "preview": "vite preview"
