--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -1,6 +1,6 @@
 {
     "name": "my-app",
-    "version": "0.1.15",
+    "version": "0.1.16",
     "private": true,
     "dependencies": {
         "@emotion/react": "^11.10.6",
@@ -18,7 +18,7 @@
         "react": "^18.2.0",
         "react-awesome-reveal": "^4.2.3",
         "react-dom": "^18.2.0",
-        "react-icons": "^5.0.1",
+        "react-icons": "5.4.0",
         "react-router-dom": "^6.21.2",
         "react-simple-captcha": "^9.3.1",
         "react-slick": "^0.30.2",
